# Automated-Cold-Email-Generator

./: .env  .gitignore  README.md  chains.py  hello.py  portfolio.py  pyproject.toml
vectorstore/: chroma.sqlite3
